syntax = "proto3";

option go_package = "bookspb";

package bookspb;

message BookRequest {
  string name = 1;
}

message BookResponse {
  string name = 1;
  string author = 2;
  int32 total_page = 3;
}

service BookService {
  rpc GetBooks(BookRequest) returns (BookResponse) {};
  rpc UpdateBooks(BookRequest) returns (BookResponse) {};
}